# modalkit

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  mkdocs.yml  modalkit.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  modal-deploy.yml  publish.yml  release.yml  security.yml
deployments/: modalkit-with-hardcoded-key.yaml  modalkit.yaml
docs/: index.md  license.md  modules.md
docs/examples/: README.md  async.md  basic.md  computer-vision.md  error-handling.md  llm-deployment.md  multimodal-ai.md  queue-patterns.md  realtime-analytics.md  taskiq-integration.md
docs/guide/: configuration.md  deployment.md  getting-started.md
modalkit/: __init__.py  auth.py  fast_api.py  inference_pipeline.py  iomodel.py  modal_config.py  modal_service.py  modalutils.py  settings.py  task_queue.py
tests/: conftest.py  test_fastapi.py  test_inference_pipeline.py  test_modal_config.py  test_modal_service.py  test_settings.py  test_task_queue.py  test_task_queue_integration.py
