[project]
name = "modalkit"
version = "0.1.0"
description = "A library to package, ship and deploy your ML app"
authors = [{ name = "Prassanna Ravishankar", email = "me@prassanna.io" }]
readme = "README.md"
keywords = ["python", "modal", "ml", "deployment"]
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic-settings-yaml>=0.2.0",
    "pydantic>=2",
    "python-decouple>=3.8",
    "loguru>=0.7.0",
    "boto3>=1.35.71",
    "fastapi>=0.115.5",
    "modal>=0.67.2",
    "pydantic-settings>=2.6.1",
    "cachetools>=5.5.0",
    "httpx>=0.28.1",
    "taskiq>=0.11.0",
    "httpcore>=1.0.9",
    "jinja2>=3.1.6",
]

[project.urls]
Repository = "https://github.com/prassanna-ravishankar/modalkit"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.9.0",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modalkit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "YTT",  # flake8-2020
    "S",    # flake8-bandit
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "T10",  # flake8-debugger
    "SIM",  # flake8-simplify
    "I",    # isort
    "C90",  # mccabe
    "E", "W",  # pycodestyle
    "F",    # pyflakes
    "PGH",  # pygrep-hooks
    "UP",   # pyupgrade
    "RUF",  # ruff
    "TRY",  # tryceratops
]
ignore = [
    "E501",   # line too long
    "E731",   # lambda assignment
    "TRY003", # long messages outside exception class
    "PGH003", # specific rule codes for type ignores
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["modalkit"]
